--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3"
   },
   "devDependencies": {
